K8s/front-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgagi-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgagi-frontend
  template:
    metadata:
      labels:
        app: pgagi-frontend
    spec:
      containers:
        - name: frontend
          image: kavithakumari062001/pgagi-frontend:ingress
          ports:
            - containerPort: 3000
