K8s/back-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgagi-backend-service
spec:
  selector:
    app: pgagi-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
