K8s/front-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgagi-frontend-service
spec:
  selector:
    app: pgagi-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: NodePort
