K8s/pgagi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgagi-ingress
spec:
  rules:
    - host: pgagi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgagi-frontend-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pgagi-backend-service
                port:
                  number: 5000
